Update Module QueryTools
